--- a/src/Component/NavBar/NavBar.css
+++ b/src/Component/NavBar/NavBar.css
@@ -3,7 +3,7 @@
     height: auto;
     background-repeat: no-repeat;
     width: 100%;
-    background-image: url("../../assets/image/homeCover2.jpg");
+    background-image: url("../../assets/image/coverHome.jpg");
     background-attachment: fixed;
     
 }
