--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -25,7 +25,7 @@
     /* padding-bottom: 0 !important; */
     margin-top: 70px;
     background-color: gainsboro;
-    padding: 30px;
+    /* padding: 30px; */
 }
 
 .social {
